<resources>
    <string name="app_name">PRACTICA_2023</string>
    <string name="api_key">3b2c2d0451ccf35871afdd25e18573dc</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_report">Weather report</string>
    <string name="now">Now</string>
    <string name="todo">TODO</string>
    <string name="_18_c">18 Cº</string>
    <string name="temperture">temperature:</string>
    <string name="sunny">Sunny</string>
    <string name="wind_speed">wind speed:</string>
    <string name="_5_m_s">5 m/s</string>
    <string name="humidity">humidity:</string>
    <string name="_55">55%</string>
    <string name="GetWeatherReportBtnText">Update</string>
    <string name="api_units">metric</string>
    <string name="timed_link">http://api.openweathermap.org/data/2.5/forecast?</string>
    <string name="current_link">http://api.openweathermap.org/data/2.5/weather?</string>
</resources>