<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/WeatherReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/weather_report"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:visibility="visible"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeatherReport">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="320dp"
            android:layout_height="218dp"
            tools:ignore="TextSizeCheck"
            tools:visibility="visible">

            <TextView
                android:id="@+id/NowLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/WeatherImg"
                android:layout_width="104dp"
                android:layout_height="95dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                android:src="@drawable/sunny"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NowLabel" />

            <TextView
                android:id="@+id/TemperatureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/temperture"
                app:layout_constraintStart_toEndOf="@+id/WeatherImg"
                app:layout_constraintTop_toTopOf="@+id/WeatherImg" />

            <TextView
                android:id="@+id/TempInfoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/_18_c"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/TemperatureLabel"
                app:layout_constraintTop_toTopOf="@+id/TemperatureLabel" />

            <TextView
                android:id="@+id/WeatherConditionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sunny"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/WeatherImg"
                app:layout_constraintStart_toStartOf="@+id/WeatherImg"
                app:layout_constraintTop_toBottomOf="@+id/WeatherImg" />

            <TextView
                android:id="@+id/WindSpeedInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/wind_speed"
                app:layout_constraintStart_toStartOf="@+id/TemperatureLabel"
                app:layout_constraintTop_toBottomOf="@+id/TempInfoLabel" />

            <TextView
                android:id="@+id/WindSpeedNumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_m_s"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/TempInfoLabel"
                app:layout_constraintTop_toTopOf="@+id/WindSpeedInfo" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/humidity"
                app:layout_constraintStart_toStartOf="@+id/WindSpeedInfo"
                app:layout_constraintTop_toBottomOf="@+id/WindSpeedNumLabel" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_55"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/WindSpeedNumLabel"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>